# ggrpo

./: .gitignore  README.md  experiments.ipynb  pyproject.toml  pytorch.ipynb
GRPO/: README.md  dataset.py  training.py
GRPO/kernels/: kernels.ipynb
ggrpo/: Dockerfile  __init__.py  history.py  reward.py  trainer.py  training.py
ggrpo/kernels/: __init__.py  fused_logps.py  kernels.ipynb  test_kernel.py
