[project]
name = "ggrpo"
version = "0.1.0"
description = "A clean, high-performance implementation of DeepSeek's GRPO algorithm with fused Triton kernels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
    "transformers>=5.8.1",
    "triton>=3.0.0; sys_platform == 'linux'",
]
